k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: board-service
  labels:
    name: board-service
